fixtures/frontend/milestone-2/valid/workspace-domain-literal-imports/main.aivi
use shared.timing (Duration)

type MyDuration = Duration
